test/expected/unterminated_quote_compound_list.out
shit: 1:11: error: Unterminated string literal.
     1 |  echo;hello"helloworld
       |            ^~~~~~~~~~~ here.
shit: 1:22: note:
     1 |  echo;hello"helloworld
       |                       ^~ Expected " here.
